testsuite/tests/saks/should_fail/T16725.hs
{-# LANGUAGE StandaloneKindSignatures #-}
{-# LANGUAGE TemplateHaskell #-}

module T16725 where

import Data.Kind (Type)

type W :: Type
