testsuite/tests/saks/should_fail/T16725.stderr

T16725.hs:8:6: error: [GHC-44432]
    The standalone kind signature for ‘W’ lacks an accompanying binding
